Overflow fix

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,12 +1,13 @@
 html
 {
-	min-height: 100vh;
+	max-height: 100vh;
 	height: 100vh;
+	overflow: hidden;
 }
 body
 {
 	min-height: 100vh !important;
-	/* height: 100vh; */
+	height: 100vh;
 	background-color:transparent;
 	font-family: "Tahoma", "Arial", "Helvetica", serif !important;
 	/* animation: rotating 6s linear infinite; */
